# Gw2Analytics

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUDIT_COMPLET.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  W5A-AUDIT-RESULT.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  opencode.json  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  sample.zevtc
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  ci_health_gate.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_v0_5_baseline.py  0002_agent_identity_columns.py  0003_fight_skills.py  0004_fight_events_blob_uri.py  0005_fight_player_summaries.py  0006_webhooks.py  0007_webhook_retry.py  0008_payload_bytes.py  0009_webhook_secret_at_rest.py  0010_agent_id_numeric.py  0011_player_role_detection.py  0012_check_constraints.py  0013_drift_cleanup.py  0014_fps_bigint.py  0014_strip_account_colon.py  0015_merge.py  0016_player_stats_enrich.py  0017_player_defense_events.py  0018_player_boon_uptimes.py  0019_fight_context.py  0020_agent_position_samples.py  0021_guilds.py  57a3c9ee1b2f_add_roles_json_to_player_summaries.py  8534265864ec_add_boon_uptimes_and_outgoing_boons_to_.py  88a9e507121b_add_boon_strips_and_condition_cleanses_.py  8b674a6a9cfc_phase3_schema_changes.py  ea3023c87c0f_revert_agent_id_to_numeric.py
apps/api/scripts/: cycle_closeout_apply_docs.py  rotate_kek.py
apps/api/src/gw2analytics_api/: __init__.py  __main__.py  _event_dispatch.py  auth.py  backfill.py  config.py  crypto.py  database.py  health.py  limiter.py  main.py  metrics.py  middleware.py  models.py  observability.py  route_helpers.py  schema_guard.py  schemas.py  services.py  storage.py
apps/api/src/gw2analytics_api/data/: gw2_skills.ndjson
apps/api/src/gw2analytics_api/models/: __init__.py  fight.py  guild.py  upload.py  webhook.py
apps/api/src/gw2analytics_api/repositories/: __init__.py  fight_repository.py  guild_repository.py  player_repository.py  upload_repository.py  (+1 more)
apps/api/tests/: FAILURE_ANALYSIS.md  __init__.py  _fixtures.py  conftest.py  test_account.py  test_agent_id_overflow.py  test_arq_metrics.py  test_backfill.py  test_backfill_eoferror.py  test_backfill_role_detection.py  test_backfill_sanitize.py  test_blob_walk_slow_path.py  test_ci_health_gate.py  test_config.py  test_config_extras.py  test_cycle_closeout_apply_docs.py  test_database.py  test_dedup_agents.py  test_dedup_skills.py  test_empty_skills_warning.py  test_event_dispatch.py  test_event_dispatch_streaming.py  test_fight_rollup_cap.py  test_fights_blob_cache.py  test_fights_blob_cache_cancellation.py  test_fights_blob_cache_thundering_herd.py  test_health_summary.py  test_healthz.py  test_integration_minio.py  test_kek_rotation.py  test_load_baseline.py  test_load_concurrent.py  test_main_cli.py  test_main_mount_order.py  test_metrics.py  test_observability.py  test_parser_version.py  test_parser_worker.py  test_persist_event_blob_except.py  test_player_compare.py  (+26 more)
apps/api/tests/routes/: _evtc_builder.py  test_fights_events.py  test_fights_per_target_helper.py  test_fights_player_skills.py  test_fights_positions.py  test_fights_readout.py  test_fights_skills.py  test_fights_squads.py  test_fights_timeline.py  test_guilds.py  test_persist_player_summaries.py  test_players_detail.py  test_players_list.py  test_players_routes.py  test_uploads_collision.py
libs/gw2_analytics/: pyproject.toml
libs/gw2_analytics/scripts/: bench_aggregators.py  bench_model_construct.py  bench_pydantic_vs_dataclass.py
libs/gw2_analytics/src/gw2_analytics/: __init__.py  _boon_ids.py  _invariants.py  _per_target_base.py  aggregate.py  buff_dispatch.py  buff_state.py  buff_uptime.py  condi_power_split.py  cross_account_timeline.py  down_contribution.py  event_window.py  multi_fight.py  per_fight_timeline.py  per_player_timeline.py  player_boons.py  player_damage.py  player_defense.py  player_heal.py  player_profile.py  position_analysis.py  role_detection.py  sidecar.py  skill_usage.py  squad_rollup.py  target_buff_removal.py  target_dps.py  target_healing.py
libs/gw2_analytics/tests/: test_aggregate.py  test_arcdps_sidecar.py  test_buff_dispatch.py  test_buff_state.py  test_buff_uptime.py  test_condi_power_split.py  test_cross_account_timeline.py  test_down_contribution.py  test_event_window.py  test_multi_fight.py  test_per_fight_timeline.py  test_per_player_timeline.py  test_per_target_rollup_base.py  test_player_boons.py  test_player_damage.py  test_player_defense.py  test_player_heal.py  test_player_profile.py  test_role_detection.py  test_skill_usage.py  test_squad_rollup.py  test_squad_rollup_refactor.py  test_target_buff_removal.py  test_target_dps.py  test_target_healing.py
libs/gw2_api_client/: pyproject.toml
libs/gw2_api_client/src/gw2_api_client/: __init__.py  client.py  exceptions.py
libs/gw2_api_client/tests/: test_client.py
libs/gw2_core/: pyproject.toml
libs/gw2_core/src/gw2_core/: __init__.py  _buff_ids.py  _scaffold.py  models.py
libs/gw2_core/tests/: conftest.py  test_barrier_event.py  test_buff_ids.py  test_event_union.py  test_models.py  test_scaffold.py
libs/gw2_evtc_parser/: pyproject.toml
libs/gw2_evtc_parser/src/gw2_evtc_parser/: __init__.py  __main__.py  exceptions.py  interface.py  overlay_log.py  parser.py  rev.py  statechange_dispatch.py
libs/gw2_evtc_parser/tests/: test_interface.py  test_parser.py  test_parser_applive_realfixture.py  test_parser_byte_alignment.py  test_parser_emit_buff.py  test_parser_emit_statechange.py  test_parser_overlay_log_scaffold.py  test_parser_perf.py  test_parser_skill_table_formats.py  test_parser_zip_bomb.py  test_rev.py
libs/gw2_skills/: README.md  pyproject.toml
libs/gw2_skills/scripts/: bootstrap_catalog.py
libs/gw2_skills/src/gw2_skills/: __init__.py  catalog.py  models.py
libs/gw2_skills/tests/: __init__.py  test_catalog.py  test_profession_validator.py
web/: .npmrc  (+14 more)
(+575 files in other folders)
