[project]
name = "gw2analytics-root"
version = "0.0.1"
description = "GW2 WvW combat analytics platform (monorepo root)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Pure virtual project: declares dev-tool groups only.
# Each workspace member keeps its own production deps in its own [project].

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "httpx>=0.27", # for tests
    "pytest-env>=1.6.0",
    "respx>=0.21",
]

[tool.uv.workspace]
members = [
    "libs/gw2_core",
    "libs/gw2_evtc_parser",
    "libs/gw2_analytics",
    "libs/gw2_api_client",
    "apps/api",
]

[tool.uv.sources]
gw2_core = { workspace = true }
gw2_evtc_parser = { workspace = true }
gw2_analytics = { workspace = true }
gw2_api_client = { workspace = true }

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Ruff: project-wide lint config (applies to every workspace member).
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Sensible default rule set; members can extend via their own pyproject.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit (security; no per-file carve-out needed since
          # config.py migrated to fully env-driven credentials)
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Tests can be more relaxed on naming + bandit (random data, asserts, etc.).
# ``apps/**/config.py`` no longer needs an S105 carve-out: the file
# migrated to fully env-driven credentials (see apps/api/src/.../config.py)
# with no hardcoded sentinel values, so bandit can flag any future
# regression at PR time.
"**/tests/**/*.py" = ["S101", "S105", "S311", "PLR2004", "N801"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest-env: inject docker-compose dev credentials into ``os.environ`` at
# session startup, so the test suite never depends on a hand-rolled
# ``.env`` file. Values mirror the credentials declared in
# ``docker-compose.yml`` for the postgres + minio services.
# ---------------------------------------------------------------------------

[tool.pytest_env]
DATABASE_URL = "postgresql+psycopg://gw2analytics:gw2analytics@localhost:5432/gw2analytics"
S3_ENDPOINT = "localhost:9000"
S3_ACCESS_KEY = "gw2analytics"
S3_SECRET_KEY = "gw2analytics-secret"
S3_BUCKET = "gw2analytics"

# ---------------------------------------------------------------------------
# Mypy: project-wide type-check config. Per-package overrides live in
# each member's pyproject.toml.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
# ``fastapi_mcp`` is imported in main.py and used at runtime
# (FastApiMCP(app).mount()) but ships no type stubs. Silence the
# import-untyped warning so the project's own mypy run stays clean.
# The pre-commit mypy hook reads this same pyproject.toml.

[[tool.mypy.overrides]]
module = ["fastapi_mcp"]
ignore_missing_imports = true
# ---------------------------------------------------------------------------
# pytest: strict asyncio mode. Async tests need an explicit
# ``@pytest.mark.asyncio`` decorator (keeps the existing fast / sync
# test suites from being silently rewired onto the asyncio loop).
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Starlette 0.50+ emits ``StarletteDeprecationWarning`` from
# ``starlette.testclient`` advising a future ``httpx2`` swap. Our dev
# dependency is ``httpx>=0.27`` (the latest stable line); the warning
# is upstream and not actionable from this repo without bumping the
# FastAPI/starlette runtime. Ignore it project-wide so the pytest
# ``-W error`` gate stays clean without forcing a starlette bump.
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
