[project]
name = "gw2analytics-root"
version = "0.0.1"
description = "GW2 WvW combat analytics platform (monorepo root)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Pure virtual project: declares dev-tool groups only.
# Each workspace member keeps its own production deps in its own [project].

[dependency-groups]
dev = [
    # v0.10.5 dep-cycle: bump to 0.15.21 (matches PR #8 + CI) so
    # local auto-fix produces the AST that the bumping CI validates.
    "ruff>=0.15.21",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "httpx>=0.27", # for tests
    "pytest-env>=1.6.0",
    "respx>=0.21",
    "time-machine>=3.2.0",
]

[tool.uv.workspace]
members = [
    "libs/gw2_core",
    "libs/gw2_evtc_parser",
    "libs/gw2_analytics",
    "libs/gw2_api_client",
    "apps/api",
]

[tool.uv.sources]
gw2_core = { workspace = true }
gw2_evtc_parser = { workspace = true }
gw2_analytics = { workspace = true }
gw2_api_client = { workspace = true }

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Ruff: project-wide lint config (applies to every workspace member).
# v0.10.5 dep-cycle consolidates the previous dual-config:
#   - ruff.toml (strict, took precedence on local runs)
#   - [tool.ruff] in pyproject.toml (lower-precedence; ignored on
#     local runs when ruff.toml existed)
# The dual config produced 200+ stale errors after a dependabot
# chain started bumping ruff over multiple patch versions. This
# consolidated block is the SINGLE SOURCE OF TRUTH; ruff.toml has
# been removed (git archeology preserves it).
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "node_modules",
    "web",
    "build",
    "dist",
    "apps/api/alembic/versions",  # autogenerated — ignore ALL (see below)
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "PIE",  # flake8-pie
    "RET",  # return-style
    "RUF",  # ruff-specific
    "PL",   # pylint (curated)
    "TID",  # tidy imports
    "ARG",  # unused-arguments
    "PTH",  # pathlib
    "G",    # logging
    "S",    # bandit (security)
    "ASYNC",
]
ignore = [
    "COM812",  # conflict with formatter
    "ISC001",  # conflict with formatter
    "PLR0913", # too many args (Pydantic models need many)
    "PLR2004", # magic values (tests / fixtures use them)
    "D",       # pydocstyle — handled by griffe / mkdocs later
]

[tool.ruff.lint.per-file-ignores]
# Tests: relaxed on naming + bandit (random data, asserts, unused
# fixture args, etc.). Union of the previous two configs' carve-outs.
"**/tests/**/*.py" = ["S101", "S105", "S311", "N801", "ARG", "ANN", "SLF001"]
# Alembic migrations are autogenerated — ignore everything there.
"apps/api/alembic/versions/**" = ["ALL"]
# Empty __init__.py re-exports are fine.
"**/__init__.py" = ["F401"]
# v0.10.5 dep-cycle: CHANGELOG-insert helpers under scripts/ paste
# raw multi-line CHANGELOG sections as triple-quoted Python strings.
# These strings routinely exceed 100 chars on a single physical
# line (128-1453 chars in current section-rewriter helpers), AND
# contain arbitrary unicode characters (e.g. × in the rationale
# text — flagged by RUF001) AND use list-concat for regex line
# rewrites (flagged by RUF005). Suppress E501 + RUF only so CI
# stays green without weakening the line-length rule or
# ruff-specific rules across the rest of the monorepo.
# I001 (isort) and F401 (unused imports) still apply.
#
# LIFETIME NOTE: the lifetime of this carve-out is tied to the
# lifetime of the scripts/ directory. Do NOT remove this entry
# without also removing scripts/ in its entirety. If a future
# contributor proposes restoring E501 + RUF enforcement here,
# the proposal MUST also include a rewrite of all scripts/*.py
# to use only ASCII-safe, ≤100-char lines.
"scripts/**/*.py" = ["E501", "RUF"]

[tool.ruff.lint.isort]
known-first-party = [
    "gw2analytics_api",
    "gw2_core",
    "gw2_evtc_parser",
    "gw2_analytics",
    "gw2_api_client",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest-env: inject docker-compose dev credentials into os.environ at
# session startup, so the test suite never depends on a hand-rolled
# .env file. Values mirror the credentials declared in docker-compose.yml
# for the postgres + minio services.
# ---------------------------------------------------------------------------

[tool.pytest_env]
DATABASE_URL = "postgresql+psycopg://gw2analytics:gw2analytics@localhost:5432/gw2analytics"
S3_ENDPOINT = "localhost:9000"
S3_ACCESS_KEY = "gw2analytics"
S3_SECRET_KEY = "gw2analytics-secret"
S3_BUCKET = "gw2analytics"
# v0.10.0 plan 031: webhook secret at rest encryption (Fernet envelope).
# 44 chars = 32 random bytes base64-url encoded (Fernet key format).
# Deterministic test KEK = base64.urlsafe_b64encode(b"a"*32); re-runs
# always decrypt the same plaintext regardless of Fernet timestamp.
# NEVER use this KEK in production; generate via
# `python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"`.
SECRETS_KEK = "YWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWE="

# ---------------------------------------------------------------------------
# Mypy: project-wide type-check config. Per-package overrides live in
# each member's pyproject.toml.
#
# v0.10.5 dep-cycle: ``exclude`` was added to mirror the
# ``mypy.ini`` exclude-regex (which prepends a duplicate
# ``.*conftest\\.py`` token). Without this carve-out, mypy
# flagged "Duplicate module named 'conftest' (also at libs/gw2_core/
# tests/conftest.py)" — pytest discovers conftest.py by FILENAME
# convention so module-name collisions are safe to suppress here.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
exclude = "(?x)(\\.venv|node_modules|web/|build/|dist/|apps/api/alembic/versions/|.*conftest\\.py)"

# fastapi_mcp is imported in main.py and used at runtime
# (FastApiMCP(app).mount()) but ships no type stubs. Silence the
# import-untyped warning so the project's own mypy run stays clean.
# The pre-commit mypy hook reads this same pyproject.toml.

[[tool.mypy.overrides]]
module = ["fastapi_mcp"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest: strict asyncio mode. Async tests need an explicit
# ``@pytest.mark.asyncio`` decorator (keeps the existing fast / sync
# test suites from being silently rewired onto the asyncio loop).
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Starlette 0.50+ emits StarletteDeprecationWarning from
# starlette.testclient advising a future httpx2 swap. Our dev
# dependency is httpx>=0.27 (the latest stable line); the warning
# is upstream and not actionable from this repo without bumping the
# FastAPI/starlette runtime. Ignore it project-wide so the pytest
# -W error gate stays clean without forcing a starlette bump.
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
