[project]
name = "gw2analytics_api"
version = "0.7.0"
description = "FastAPI app for GW2Analytics. Wires gw2_core + gw2_evtc_parser + gw2_api_client behind endpoints."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "fastapi-mcp>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "minio>=7.2",
    "python-multipart>=0.0.20",
    "fastapi-mcp>=0.1",
    "httpx>=0.27",    "gw2_core",
    "gw2_evtc_parser",
    "gw2_analytics",
    "gw2_api_client>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2analytics_api"]

[tool.uv]
package = true
