[project]
name = "gw2analytics_api"
version = "0.8.6"
description = "FastAPI app for GW2Analytics. Wires gw2_core + gw2_evtc_parser + gw2_api_client behind endpoints."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "fastapi-mcp>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.13",
    "minio>=7.2",
    "python-multipart>=0.0.20",
    "fastapi-mcp>=0.1",
    "httpx>=0.27",
    "cryptography>=43.0.1",  # v0.10.0 plan 031: Fernet envelope encryption-at-rest for webhook secrets
    # v0.10.1 plan 010: Arq broker + client for the CPU-bound parser
    # worker. ``process_parse`` moves off FastAPI's ``BackgroundTasks``
    # (GIL-bottlenecked on parallel uploads) to a dedicated Arq
    # worker process (separate GIL, separate core pool). ``arq`` is
    # the broker + worker library; ``redis`` is the broker transport.
    # The worker is started via the arq CLI
    # (``arq gw2analytics_api.workers.parser_settings.WorkerSettings``)
    # in a separate process; the FastAPI app only enqueues jobs
    # via ``arq.create_pool``.
    "arq>=0.25",
    "redis>=5.0",
    "gw2_core",
    "gw2_evtc_parser",
    "gw2_analytics",
    "gw2_api_client>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2analytics_api"]

[tool.uv]
package = true
