[project]
name = "gw2analytics_api"
version = "0.10.25"
description = "FastAPI app for GW2Analytics."
requires-python = ">=3.12"
# v0.15.2: this nested workspace member has NO PEP 639 ``license`` /
# ``license-files`` block -- the root ``../../pyproject.toml``
# carries the workspace-level ``LicenseRef-Proprietary``
# declaration. PEP 639 requires ``license-files`` paths to live
# INSIDE the project directory, but the canonical LICENSE is at
# the workspace root. Setting it on every nested project would
# either require copying LICENSE into each subdir (license drift
# risk) or force-include via hatch config (build-time plumbing).
# Both are over-engineered for an internal-only workspace that
# will never be published to PyPI; the root declaration is the
# single source of truth.
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "fastapi-mcp>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.13",
    "slowapi>=0.1.9",
    "minio>=7.2",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    "cryptography>=43.0.1",  # v0.10.0 plan 031: Fernet envelope encryption-at-rest for webhook secrets
    # v0.10.1 plan 010: Arq broker + client for the CPU-bound parser
    # worker. ``process_parse`` moves off FastAPI's ``BackgroundTasks``
    # (GIL-bottlenecked on parallel uploads) to a dedicated Arq
    # worker process (separate GIL, separate core pool). ``arq`` is
    # the broker + worker library; ``redis`` is the broker transport.
    # The worker is started via the arq CLI
    # (``arq gw2analytics_api.workers.parser_settings.WorkerSettings``)
    # in a separate process; the FastAPI app only enqueues jobs
    # via ``arq.create_pool``.
    "arq>=0.25",
    "redis>=5.0,<8",
    # Phase 6.1: OpenTelemetry tracing. Gated behind
    # ``OTEL_EXPORTER_OTLP_ENDPOINT``; when unset, ``init_otel`` is a
    # no-op and the import is lazy so the cold-startup footprint is
    # ~0 bytes. The HTTP/protobuf exporter (vs gRPC) keeps the
    # ``Dockerfile`` pure-Python -- gRPC would force a C-extension
    # build step. Versions match OTel-Python semconv 1.27
    # compatibility across the api/sdk/instrumentation packages.
    # The instrumentation packages are pinned EXACT (``==0.48b0``)
    # -- not ``>=0.48b0`` -- because each ``0.NNb0`` release targets
    # a specific ``opentelemetry-api`` minor. A loose ``>=`` pin
    # could pull ``0.49b0`` (which instruments against api 1.30+)
    # and silently clash with our ``api>=1.27,<2`` floor.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
    # Phase 6.1 follow-up: ``pkg_resources`` is removed from
    # Python 3.12 stdlib. The OTel instrumentation packages
    # (and ``prometheus_client``) read it at import time to
    # resolve installed distribution versions. Pin setuptools
    # below 80 because setuptools 80+ DELETED the historical
    # ``pkg_resources`` submodule (moved out of the bundled
    # wheel). Without the upper bound, uv resolves to
    # setuptools 83+ and ``opentelemetry.instrumentation.
    # dependencies`` at import time fails with
    # ``ModuleNotFoundError: No module named 'pkg_resources'``.
    # When OTel instrumentation moves to ``importlib.metadata``
    # (>0.48b0), this dep can be dropped entirely.
    "setuptools>=70.0.0,<80",
    "prometheus_client>=0.20",  # v0.10.12 plan 017: Arq worker metrics + /metrics endpoint
    "gw2_core",
    "gw2_evtc_parser",
    "gw2_analytics",
    "gw2_api_client>=0.1.0",
]

[dependency-groups]
dev = []

# Mirror of the root ``[tool.pytest_env]`` block. The
# ``arq-integration`` CI job ``cd``s into this directory before
# running pytest; pytest's rootdir discovery normally finds the
# root ``pyproject.toml`` via the ``[tool.pytest.ini_options]``
# marker, BUT if anyone ever adds that block here, rootdir flips
# to ``apps/api/`` and the SECRETS_KEK line stops being injected,
# causing Fernet to crash mid-suite with
# ``ValueError: Fernet key must be 32 url-safe base64-encoded bytes.``
# Mirroring the test-fixture value here closes that future risk
# without depending on cross-directory config discovery.
# The value matches ``pyproject.toml`` exactly:
#   base64.urlsafe_b64encode(b"a"*32) = "YWFh...YWE="
[tool.pytest_env]
SECRETS_KEK = "YWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWE="

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2analytics_api"]

[tool.uv]
package = true
