[project]
name = "gw2_analytics"
version = "0.10.25"
description = "Multi-level Guild Wars 2 combat analytics (single / multi-fight / per-player profiles)."
requires-python = ">=3.12"
# v0.15.2: SPDX LicenseRef form (PEP 639 bare-string) replaces the
# deprecated ``{ text = ... }`` dict form. See ../../LICENSE.
license = "LicenseRef-Proprietary"
# PEP 639 compliance: declare which file holds the full license
# text. See ../../LICENSE for the full legal text.
license-files = ["../../LICENSE"]PlaceholderEnd3
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "pydantic>=2.9",
    "gw2_core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2_analytics"]

[tool.uv]
package = true
