[project]
name = "gw2_analytics"
version = "0.10.25"
description = "Multi-level Guild Wars 2 combat analytics (single / multi-fight / per-player profiles)."
requires-python = ">=3.12"
# v0.15.2: this nested workspace member has NO PEP 639 ``license`` /
# ``license-files`` block -- the root ``../../pyproject.toml``
# carries the workspace-level ``LicenseRef-Proprietary``
# declaration. PEP 639 requires ``license-files`` paths to live
# INSIDE the project directory, but the canonical LICENSE is at
# the workspace root. Setting it on every nested project would
# either require copying LICENSE into each subdir (license drift
# risk) or force-include via hatch config (build-time plumbing).
# Both are over-engineered for an internal-only workspace that
# will never be published to PyPI; the root declaration is the
# single source of truth.
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "pydantic>=2.9",
    "gw2_core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2_analytics"]

[tool.uv]
package = true
