[project]
name = "gw2_api_client"
version = "0.0.1"
description = "Typed client for the Guild Wars 2 REST API v2."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2_api_client"]

[tool.uv]
package = true
