[project]
name = "gw2_core"
version = "0.3.0"
description = "Stable internal data model for GW2 combat events + REST API shapes. Pure Pydantic, no I/O."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GW2Analytics team" }]
dependencies = [
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2_core"]

[tool.uv]
package = true
