[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gw2-skills"
version = "0.10.25"
description = "GW2 skills catalog: lookup by skill_id, by profession, name resolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "gw2-core>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gw2_skills"]
